finish project by my own

--- a/ConsoleApp2/ConsoleApp2.fsproj
+++ b/ConsoleApp2/ConsoleApp2.fsproj
@@ -7,10 +7,7 @@
 
     <ItemGroup>
         <Compile Include="GameType.fs" />
-        
-        
-        
-        
+        <Compile Include="Game.fs" />
         <Compile Include="Program.fs"/>
     </ItemGroup>
 
